Fixed up ligatures on Safari. Added social links.

--- a/components/App/App.css
+++ b/components/App/App.css
@@ -17,6 +17,7 @@ main {
 /* Background Gradient */
 .header-bg {
   position: sticky;
+  position: -webkit-sticky;  
   top: 0;
   z-index: 8;
   margin-top: -2em;
