--- a/styles/base.css
+++ b/styles/base.css
@@ -35,6 +35,7 @@ h1, h2, h3, h4 {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.2em;
+  font-variant-ligatures: none;
 }
 
 h2:first-child {
